<resources>
    <string name="app_name">CS3270A5 Bahl</string>
    <string name="practice_making_change">Practice Making Change</string>
    <string name="change_to_make">Change to Make</string>
    <string name="change_total_so_far">Change total so far</string>
    <string name="_0_00">$0.00</string>
    <string name="new_amount">NEW AMOUNT</string>
    <string name="start_over">START OVER</string>
    <string name="_0">0</string>
    <string name="_50">$50</string>
    <string name="_20">$20</string>
    <string name="_10">$10</string>
    <string name="_5">$5</string>
    <string name="_1">$1</string>
    <string name="_0_50">.50</string>
    <string name="_0_25">.25</string>
    <string name="_0_10">.10</string>
    <string name="_0_05">.05</string>
    <string name="_0_01">.01</string>
    <string name="correct_change_count">Correct Change Count</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="zero_correct_count">Zero Correct Count</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="times_up">Time\'s Up!</string>
    <string name="_try_again">You should try again.</string>
    <string name="too_much_change">That\'s too much change.</string>
    <string name="you_did_it">You did it!</string>
    <string name="go_again">You should go again.</string>
    <string name="_ok">Ok</string>
    <string name="set_change_max">Set Change Max</string>
    <string name="maximum_change_amount">Maximum Change Amount:</string>
    <string name="save">Save</string>
</resources>